src/styles/main.scss
$min-height: calc(100vh - 186px);
.navbar .left_menu {
  margin-left: auto;
}
main {
  min-height: $min-height;
}

// PeopleList page style start

.role{
  font-size: 23px;
  text-align: center;
  margin-bottom: 20px;
}
.description{
    text-align: center;
  a{
    color: black;
    h5{
      margin-top: .5rem;
    }
    &:hover{
      text-decoration: none;
    }
  }
}

// PeopleList page style End

// Profile Page style start

.detail{
  h5{
    margin-top: .5rem;
  }
}

// Profile Page style end

.carousel {
  .carousel-inner {
    .carousel-caption {
      width: 40%;
      position: absolute;
      top: 18%;
      left: 20%;
      z-index: 10;
      padding-top: 20px;
      padding-bottom: 20px;
      color: #fff;
      text-align: left;

      .main-banner-text {
        color: lightgray;
        font-size: 18pt;
        font-weight: 500;
        text-shadow: 0px 0px 10px black;

        .highlight {
          font-weight: 700;
          font-size: 32pt;
          text-shadow: 2px 2px 2px #00000073;
          color: #bb7e45;
        }
      }
    }
  }
}

section {
  padding: 5% 0px;

  .sec-title {
    text-align: center;
    margin-bottom: 5%;
  }

  .separator {
    border: 1px solid;
    width: 26%;
    margin-left: 37%;
    margin-top: 20px;
  }

  .partner_img {
    height: 200px;
  }
}

section.affiliation {
  border-top: 3px solid #e8e8e8;
  .crs-img {
    text-align: center;
  }
}

section.news {
  background: #f5f5f5;
}

.stat {
  text-align: center;
  border-right: 2px solid #ebebeb;
}

.last-column {
  text-align: center;
}

.number {
  font-size: 45px;
  font-weight: 500;
}
.label {
  font-size: 18px;
  color: #666666;
}

.gray-section {
  background: #f5f5f5;
  .crop_monitoring_sec {
    margin-bottom: 5%;
  }

  .environment_sec {
    margin: 5% 0px;
  }

  .water_sec {
    margin-top: 5%;
  }
  .project_wrapper {
    display: flex;
    margin-top: 12px;
    .img_side {
      float: left;
      display: block;
      margin-right: 15px;
      .project_img {
        width: 200px;
      }
    }
    .project_detail {
      display: block;
      float: right;
    }
  }
}

.footer-section {
  background: #2e3192;
  color: white;
  padding: 20px 0px;
  p {
    font-size: 19px;
    margin-bottom: 0px;
  }
  .flex-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    margin-top: 3px;
    .fab {
      color: white;
      margin-left: 20px;
      font-size: 20px;
    }
  }
}

// Media Query

@media only screen and (max-width: 600px) {
  .logo {
    width: 75%;
  }
}

